# ChatVoxGUI

./: .gitignore  README.md  install_requires.txt  pyinstaller.bat  setup.cfg  setup.iss
chat_vox_gui/: appbar.py  main.py  settings.py  top.py
