[matadata]
name = chat-vox-gui
version = 0.1.0
url = https://github.com/glyzinieh/chat-vox-gui
author = glyzinieh
author_email = wisteriatp@gmail.com
description = A chatbot that can reply to YouTube Chat message with voice.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    flet
    'chat-vox@git+https://github.com/glyzinieh/ChatVox.git@0.4.2'
